compiler/test/snapshot/infer-expr/error-when-reassign-to-wrong-type.exp
Error when reassign to wrong type.

SOURCE:
{
  let x = 1;
  x = "foo"
}

OUTPUT:
Variable x is not declared as mutable. Use `let mut x`.

3|    x = "foo"
      ^^^^^^^^^